# CodeQuest

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  README.md  codequest-seed-data.json  thesis-implementation-gaps.md  部署说明.md
admin/: .eslintrc.cjs  (+7 more)
backend/: .env.example  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  seed_data.sql
backend/.pi-lens/: turn-state.json
backend/.pi-lens/cache/: review-graph.json
backend/config/: default.toml  local.example.toml  local.toml
backend/migrations/: 001_initial_schema.sql  002_increase_refresh_token_length.sql  003_add_performance_indexes.sql  004_feedback_moderation.sql  005_add_challenges_published_at.sql  006_comprehensive_seed_data.sql  007_extend_ai_request_type.sql  008_fix_chapter_content_newlines.sql
backend/src/: AGENTS.md  config.rs  db.rs  main.rs  models.rs  routes.rs
backend/src/handlers/: AGENTS.md  admin.rs  ai_help.rs  auth.rs  challenge.rs  chapter.rs  course.rs  daily_challenge.rs  exercise.rs  leaderboard.rs  mod.rs  progress.rs  reward.rs  social.rs  submission.rs  user.rs
backend/src/middleware/: AGENTS.md  cors.rs  logging.rs
backend/src/services/: AGENTS.md  account_service.rs  ai_service.rs  course_service.rs  judge_service.rs  mod.rs  progress_service.rs  xp_service.rs
backend/tests/: ai_help_test.rs  auth_test.rs  challenge_test.rs  chapter_test.rs  contract_test.rs  course_test.rs  daily_challenge_test.rs  exercise_test.rs  integration_test.rs  leaderboard_test.rs  progress_test.rs  reward_test.rs  social_test.rs  submission_test.rs  user_test.rs
backend/tests/common/: mod.rs
(+289 files in other folders)
