[package]
name = "learning-app-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.89.3", features = ["affix-state", "jwt-auth", "test", "oapi", "cors"] }
jsonwebtoken = "9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
bcrypt = "0.16"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
serial_test = "3"

[lib]
name = "learning_app_backend"
path = "src/lib.rs"

[[bin]]
name = "learning-app-backend"
path = "src/main.rs"
